static landing page

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
         }
 
         #viewSourceBtn {
-            background-color: #3498db;
+            background-color: #22cfee;
             color: #ffffff;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            z-index: 1000;
+            margin-top: 10px; /* Add margin to the top */
         }
 
         #header {
@@ -33,7 +30,7 @@
             max-width: 70%;
             height: auto;
             margin-bottom: 10px;
-            margin-top: 20px; /* Adjust the margin as needed */
+            margin-top: 10px; /* Adjust the margin as needed */
         }
 
         #container {
@@ -43,8 +40,8 @@
 
         #container2 {
             text-align: center;
-            margin-bottom: 60px;
-            margin-top: 40px; /* Adjust the margin as needed */
+            margin-bottom: 10px;
+            margin-top: 10px; /* Adjust the margin as needed */
         }
         h1 {
             font-family: sans-serif; /* Replace 'Your Chosen Font' with an actual font name */
@@ -64,7 +61,7 @@
 </head>
 <body>
 
-<a id="viewSourceBtn" href="https://github.com/your-github-username/your-repository" target="_blank">View Source Code</a>
+
 
 
 <div id="container2">
@@ -85,7 +82,8 @@
 </div>
 
 <div id="container">
-    <a id="downloadBtn" href="https://github.com/saykhar7/GymHomie/releases/download/GymHomieAppV2_Release/GymHomie_APK_V2.apk" download>Download</a>
+    <a id="downloadBtn" href="https://github.com/saykhar7/GymHomie/releases/download/GymHomieAppV2_Release/GymHomie_APK_V2.apk" download>Download Apk</a>
+    <a id="viewSourceBtn" href="https://github.com/saykhar7/GymHomie" target="_blank">View Source Code</a>
 </div>
 
 </body>
